kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-manager-front
  namespace: moreillon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group-manager-front
  template:
    metadata:
      labels:
        app: group-manager-front
    spec:
      containers:
        - name: group-manager-front
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: group-manager-front
  namespace: moreillon
spec:
  ports:
    - port: 80
      nodePort: 31101
  selector:
    app: group-manager-front
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: group-manager-front-legacy
  namespace: moreillon
spec:
  ports:
    - port: 80
      nodePort: 31100
  selector:
    app: group-manager-front
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group-manager-front
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Group Manager
    gethomepage.dev/icon: https://gitlab.jtektrnd.net/uploads/-/system/project/avatar/4316/account-multiple-custom.png
    gethomepage.dev/group: 業務アプリ
    gethomepage.dev/pod-selector: app=group-manager-front
spec:
  ingressClassName: jtektrnd-net
  rules:
    - host: groups.jtektrnd.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: group-manager-front
                port:
                  number: 80
